--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
@@ -7,7 +7,12 @@
 }
 
 mat-sidenav-container {
-  height: 100%;
+  // This has been a real pain.
+  // Sizing this to 100% causes vertical scrollbars to appear,
+  // and seems to size without considering the toolbar (ie., it
+  // appears we get a height that is toolbarHeight too high.
+  //Usng this approach seems to work.
+  height: calc(100vh - #{$toolbar-height})
 }
 .container {
   height: 100%;
